manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: observabilite
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000 # Port du service Grafana
      targetPort: 3000
