manifests/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: observabilite
spec:
  selector:
    app: pgadmin
  ports:
    - protocol: TCP
      port: 5050 # Port du service pgAdmin
      targetPort: 80
